# SYNAPSE-DRIVE

./: .gitignore  90分钟实验数据吞吐说明.md  CONTRIBUTING.md  ExperimentManager.cs  LICENSE  MANUAL_INSTALL_GUIDE.md  MANUAL_PYLSL_INSTALL.md  PYTHON_ENV_FIX_GUIDE.md  README.md  clean_pycache.py  create_env.bat  fix_environment.py  pyproject.toml  requirements.txt  setup_python.bat  setup_simple.bat  start_sync_software.bat  verify_output_integrity.py  启动_可视化版本.bat  开源完成总结.md  版本差异说明.md  老版本v16_dual_screen_sync.py  老版本可视化传输速率版本custom_driving_sync - v 15 seperate ver - 副本.py
.trae/documents/: 恢复 S0022 F24 生理数据日志并对齐驾驶事件.md
.trae/skills/msys2-setup/: SKILL.md
.trae/specs/open-source-prep/: checklist.md  spec.md  tasks.md
src/: TobiiSyncRecorder_v16.py  __init__.py  custom_driving_sync_v15_seperate_ver.py  experiment_90min_config.py  performance_monitor.py  test_driving_stream_writer.py  test_lsl.py  test_optimization.py
